# AFC_Squad_discord_cron

./: .env.example  .gitignore  AFC_Squad_discord_cron.code-workspace  README.md  bot.env.example  connect_bot.sh  connect_cron.sh  connect_db.sh  cron.env.example  docker-compose.yml  run_compose.sh  ssh_raspberri.sh
cronjob_cws/: .dockerignore  .gitignore  Dockerfile  crontabfile  cws_reminder.py  database.py  entrypoints.sh  models.py  pyproject.toml  run_docker.sh  webhook.py  wins_tracker.py
discord-bot/: .gitignore  Dockerfile  alembic.ini  create_db_backup.sh  crewwars.cron  generate_team_image.py  import_db_backup.sh  main.py  migrate.sh  pyproject.toml  run_bot.sh  webhook.py
discord-bot/alembic/: env.py
discord-bot/cogs/: admin.py  application_logger.py  auto_clean.py  challonge_practice.py  crew_member_roles.py  crewwars.py  dynamax_raids.py  game_tools.py  giveaways.py  help.py  ladder_chest.py  lending.py  members.py  message_bumper.py  pokemon.py  pokepaste.py  profile.py  rules.py  server_info.py  testing.py  tournament.py  tournament_info.py  trader_events.py
discord-bot/data/: rules.json
discord-bot/database/: _models.py  database.py  models.py
discord-bot/db_backups/: afc_db_backup_20250803163255.sql  afc_db_backup_20250805024557.sql  afc_db_backup_20250916151116.sql  afc_db_backup_20250930144517.sql  afc_db_backup_20251004113733.sql  afc_db_backup_20251007005843.sql
discord-bot/helpers/: __init__.py  channel_factory.py  channel_management.py  command_logger.py  datetime_helper.py  discord_helper.py  embed_factory.py  member_helper.py  (+2 more)
(+38 files in other folders)
